@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>info.kuechler.bmf.taxcalculator</groupId>
 	<artifactId>taxcalculator</artifactId>
-	<version>2017.0.0</version>
+	<version>2018.0.0-SNAPSHOT</version>
 	<name>TaxCalculator</name>
 	
 	<!-- 
@@ -45,8 +45,7 @@
 	</issueManagement>
 	<licenses>
 		<license>
-			<distribution>repo</distribution>
-			<name>The MIT License (MIT)</name>
+			<name>The MIT License</name>
 			<url>http://opensource.org/licenses/mit-license.php</url>
 		</license>
 	</licenses>
@@ -56,14 +55,21 @@
 			<url>https://github.com/admiralsmaster</url>
 		</developer>
 	</developers>
+	<contributors>
+		<contributor>
+			<name>Thomas Darimont</name>
+			<url>https://github.com/thomasdarimont</url>
+		</contributor>
+	</contributors>
 	<scm>
-		<connection>scm:git:git@github.com:admiralsmaster/taxcalculator.git</connection>
-		<developerConnection>scm:git:git@github.com:admiralsmaster/taxcalculator.git</developerConnection>
-		<url>git@github.com:admiralsmaster/taxcalculator.git</url>
+		<connection>scm:git:git://github.com/admiralsmaster/taxcalculator.git</connection>
+		<developerConnection>scm:git:ssh://github.com:admiralsmaster/taxcalculator.git</developerConnection>
+		<url>http://github.com/admiralsmaster/taxcalculator/tree/master</url>
 	</scm>
 
 	<properties>
-		<project.java.version>1.7</project.java.version>
+		<project.java.version>1.8</project.java.version>
+		<project.java.version.plusone>1.9</project.java.version.plusone>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<file.host>https://www.bmf-steuerrechner.de</file.host>
 		<classes.package.directory>info/kuechler/bmf/taxcalculator</classes.package.directory>
@@ -84,7 +90,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.3</version>
+			<version>4.5.4</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -97,19 +103,19 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
-		    <version>3.5</version>
+		    <version>3.7</version>
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-csv</artifactId>
-		    <version>1.4</version>
+		    <version>1.5</version>
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.kuechler.bmf.taxapi</groupId>
 			<artifactId>taxapi</artifactId>
-			<version>2017.0.0</version>
+			<version>2018.0.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -132,14 +138,14 @@
 			<!-- log4j-2 adapter -->
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.8.2</version>
+			<version>2.10.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<!-- log4j-2 impl -->
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.8.2</version>
+			<version>2.10.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -150,7 +156,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.12</version>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -169,7 +175,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>${project.java.version}</source>
 					<target>${project.java.version}</target>
@@ -182,6 +188,18 @@
 				<artifactId>wagon-maven-plugin</artifactId>
 				<version>1.0</version>
 				<executions>
+					<execution>
+						<id>download-2018</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>download-single</goal>
+						</goals>
+						<configuration>
+							<url>${file.host}</url>
+							<fromFile>pruefdaten/Lohnsteuer2018.xml</fromFile>
+							<toFile>${file.download.target}/Lohnsteuer2018Big.xml</toFile>
+						</configuration>
+					</execution>
 					<execution>
 						<id>download-2017</id>
 						<phase>generate-sources</phase>
@@ -423,9 +441,9 @@
 
 			<!-- format code for good source view :) -->
 			<plugin>
-				<groupId>net.revelc.code</groupId>
+				<groupId>net.revelc.code.formatter</groupId>
 				<artifactId>formatter-maven-plugin</artifactId>
-				<version>0.5.2</version>
+				<version>2.7.1</version>
 				<executions>
 					<execution>
 						<id>format</id>
@@ -447,6 +465,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<!-- higher version to use maven-fluido-skin:1.6 for maven site -->
+			<plugin>
+	    			<groupId>org.apache.maven.plugins</groupId>
+	    			<artifactId>maven-site-plugin</artifactId>
+	    			<version>3.6</version>
+			</plugin>
+			
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-jar-plugin</artifactId>
+			    <version>3.0.2</version>
+                <configuration>
+                   <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>info.kuechler.bmf.taxcalculator</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
 
 		</plugins>
 	</build>
@@ -472,16 +510,45 @@
 					<reportSet>
 						<id>aggregate</id>
 						<inherited>false</inherited>
-						<reports>
-							<report>aggregate</report>
-						</reports>
 					</reportSet>
 				</reportSets>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
 	</reporting>
 
 	<profiles>
+		<profile>
+			<!-- profile for jdk9 -->
+			<id>jdk9</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+					    <groupId>org.apache.maven.plugins</groupId>
+					    <artifactId>maven-surefire-plugin</artifactId>
+					    <version>2.20.1</version>
+						<executions>
+							<execution>
+								<id>default-test</id>
+								<phase>test</phase>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<argLine>--add-modules java.xml.bind</argLine>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
 		<profile>
 			<!-- profile for release, local development is faster w/o this plugins -->
 			<id>release</id>
@@ -519,7 +586,7 @@
 								<configuration>
 									<rules>
 										<requireJavaVersion>
-											<version>[${project.java.version},1.8)</version>
+											<version>[${project.java.version},${project.java.version.plusone})</version>
 										</requireJavaVersion>
 									</rules>
 								</configuration>
@@ -577,7 +644,7 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.7</version>
+						<version>1.6.8</version>
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
